# bictory_test_merkle_tree

./: Anchor.toml  id.json
app/backend/: .gitignore  package.json  tsconfig.json
app/backend/src/: app.ts  whitelists.json
app/backend/src/config/: index.ts
app/backend/src/controllers/merkleController/: index.ts
app/backend/src/routes/: index.ts
app/backend/src/routes/merkleRoutes/: index.ts
app/backend/src/services/authService/: index.ts
app/backend/src/services/merkleService/: index.ts
app/frontend/: .eslintignore  .eslintrc.json  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
app/frontend/src/: App.tsx  index.css  index.html  index.tsx
app/frontend/src/components/AddWhiteList/: AddWhiteList.tsx
app/frontend/src/components/Airdrop/: Airdrop.tsx
app/frontend/src/components/Airdrop/Styles/: AirdropSucess.css
app/frontend/src/components/BioElement/: BioElement.jsx
app/frontend/src/components/GetBalance/: GetBalance.tsx
app/frontend/src/components/Merkle/: Merkle.tsx
app/frontend/src/components/Navbar/: Navbar.tsx
app/frontend/src/components/WalletConnection/: WalletConnection.tsx
app/frontend/src/config/: idl.json  index.ts
app/frontend/src/helpers/: index.tsx
programs/bictory_test/: Cargo.toml
programs/bictory_test/src/: account.rs  constants.rs  contexts.rs  errors.rs  lib.rs  utils.rs
tests/: bictory_test.ts  whitelists
